--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -64,8 +64,8 @@
         "currently_reading": "Currently<br>Reading",
         "description": "Description",
         "read_books": "Read Books",
-        "search_title": "Search by title or author or description",
-        "search_placeholder": "Search title or author or description...",
+        "search_title": "Search by title, author or description",
+        "search_placeholder": "Search title, author or description...",
         "only_this_year": "Only this year",
         "sort": {
             "most_recent": "Most recent",
